# mypromotion-engine-core

./: .gitignore  Dockerfile  README.en.md  README.md  deploy.sh  docker-compose.yml  nginx-demo.conf  pyproject.toml  requirements.txt
demo/: app.py
demo/static/: index.html
doc/opensource/: 开源核心功能范围定义.md
promotion_engine/: __init__.py  coupon_calculation.py  demo_server.py  engine.py  mutex.py  price_protection.py  refund.py  types.py
promotion_engine/plugins/: actions.py  base.py  builtins.py  conditions.py  scopes.py
tests/: test_coupon_calculation.py  test_engine.py  test_mutex.py  test_price_protection.py  test_refund.py
