[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mypromotion-engine-core"
version = "0.1.0"
description = "High-precision promotion calculation engine for Python. Decimal-native, mutex-aware, pluggable. Zero framework dependency."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "MyPromotion Team"},
]
keywords = ["promotion", "e-commerce", "discount", "pricing", "decimal", "engine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
demo = ["fastapi>=0.100.0", "uvicorn[standard]>=0.23.0"]

[project.scripts]
mypromotion-engine-demo = "promotion_engine.demo_server:main"

[project.urls]
Homepage = "https://github.com/faqtong/mypromotion-engine-core"
Documentation = "https://github.com/faqtong/mypromotion-engine-core#readme"
Repository = "https://github.com/faqtong/mypromotion-engine-core"

[tool.setuptools.packages.find]
where = ["."]
include = ["promotion_engine*"]
exclude = ["tests*", "demo*"]
